<resources>
    <string name="app_name">Ecommarce</string>
    <string name="log_in">Log in</string>
    <string name="email_address">Email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="enter_name">Enter Name</string>
    <string name="create_password">Create Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="admin">Admin</string>
    <string name="add_product">Add Product</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_brand">Enter Product Brand</string>
    <string name="enter_backpack_capacity">Enter BackPack Capacity</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="enter_product_detail">Enter Product Detail</string>
    <string name="publish">Publish</string>
    <string name="product_name">Product Name</string>
    <string name="brand">Brand :</string>
    <string name="niks">Niks</string>
    <string name="_60_50">$0.00</string>
    <string name="fashion">Fashion</string>
    <string name="most">MOST</string>
    <string name="popular">POPULAR</string>
    <string name="search">Search</string>
    <string name="product_detail">Product Detail</string>
    <string name="backpack_capacity">Backpack capacity :</string>
    <string name="_8_liters">8 Liters</string>
    <string name="item_name">Item Name</string>
    <string name="added_to_cart">Added To Cart</string>
    <string name="_1">1</string>
    <string name="subtotal">Subtotal</string>
    <string name="process_to_buy">Proceed to buy</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="todo">TODO</string>
    <string name="payment_method">Payment Method</string>
    <string name="google_pay">Google Pay</string>
    <string name="checked_automatically">Checked Automatically</string>
    <string name="phone_pay">Phone Pay</string>
    <string name="address">Address</string>
    <string name="total">Total</string>
    <string name="pay_now">Pay Now</string>
    <string name="payment_success">Payment Success</string>
    <string name="your_payment_was_successfull_njust_wait_skincares_aarive_at_home">Your payment was successfull\njust wait Skincares aarive at home</string>
    <string name="back_to_home">Back to Home</string>
    <string name="paytm">Paytm</string>
</resources>