<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical|center_horizontal"
    android:background="@color/bgcolor"
    tools:context=".Activity.Success">

    <ImageView
        android:layout_width="@dimen/_225sdp"
        android:layout_height="@dimen/_225sdp"
        android:src="@drawable/success"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_success"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_50sdp"
        android:textColor="#000000"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_21sdp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_payment_was_successfull_njust_wait_skincares_aarive_at_home"
        android:gravity="center_horizontal"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="#959494"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBackHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:text="@string/back_to_home"
        android:layout_marginTop="@dimen/_80sdp"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:background="@drawable/btn_press"

        />



</LinearLayout>