<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frmContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    tools:context=".Fragment.homefrag">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="@font/roboto_black"
                android:gravity="center"
                android:text="@string/fashion"
                android:textColor="#000000"
                android:textSize="@dimen/_27sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:fontFamily="@font/alegreyasansscbold"
                android:text="@string/most"
                android:textColor="@color/black"
                android:textSize="@dimen/_50sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-30dp"
                android:fontFamily="@font/alegreyasansscbold"
                android:text="@string/popular"
                android:textColor="@color/black"
                android:textSize="@dimen/_50sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_23sdp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtHomeSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:autofillHints="no"
                    android:background="@drawable/custom_edtsearchtext"
                    android:drawableStart="@drawable/ic_baseline_search_24"
                    android:drawablePadding="@dimen/_10sdp"
                    android:elevation="@dimen/_10sdp"
                    android:hint="@string/search"
                    android:inputType="text" />



            </LinearLayout>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_rcvview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_20sdp" />


        </LinearLayout>



</androidx.core.widget.NestedScrollView>